# Neural-Network

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  data_set.cpp  data_set.hpp  dataset_data_test.csv  edge.cpp  edge.hpp  expected.txt  main  main.cpp  neural_network.cpp  neural_network.hpp  neural_network_tests  neural_network_tests.cpp  node.cpp  node.hpp  test
datasets/: classification_train_data.csv  regression_train_data.csv  regression_train_labels.csv
include/: activation_type.hpp  data_set.hpp  loss_type.hpp  neural_network.hpp  node.hpp  node_type.hpp
src/: data_set.cpp  edge.cpp  neural_network.cpp  node.cpp
src/datasets/: classification_data.csv  regression_data.csv  regression_labels.csv
src/utils/: dataset_generator.py
tests/: neural_network_tests.cpp
tests/datasets/: dataset_labels_test.csv
tests/details/: expected_details.txt
utils/: dataset_generator.py
